Thu Aug  4 05:39:03 CEST 2016
added :: podofo-0.9.3-x86_64-1sl.txz
added :: lua-5.1.5-x86_64-3sl.txz
+--------------------------+
Mon Aug  1 05:39:21 CEST 2016
added :: skype_static-4.3.0.37-x86_64-4sl.txz
+--------------------------+
Tue Jul 26 05:39:06 CEST 2016
recom :: flashplayer-plugin-11.2.202.632-x86_64-2sl.txz
+--------------------------+
Mon Jul 25 05:39:34 CEST 2016
added :: libwebp-0.4.3-x86_64-1sl.txz
added :: goffice-0.10.31-x86_64-1sl.txz
added :: geoclue-0.12.99-x86_64-2sl.txz
added :: djmount-0.71-x86_64-1sl.txz
added :: gslapt-0.5.4c-x86_64-1sl.txz
recom :: lame-3.99.5-x86_64-4sl.txz
+--------------------------+
Thu Jul 21 05:39:11 CEST 2016
added :: aMule-2.3.1_r10933-x86_64-1sl.txz
added :: beanstalkd-1.10-x86_64-3sl.txz
added :: flashplayer-plugin-11.2.202.632-x86_64-3sl.txz
added :: plib-1.8.5-x86_64-2sl.txz
added :: freealut-1.1.0-x86_64-3sl.txz
added :: libupnp-1.6.20-x86_64-1sl.txz
added :: gmtk-1.0.8-x86_64-3sl.txz
added :: cryptopp-5.6.2-x86_64-2sl.txz
added :: OpenAL-1.17.2-x86_64-2sl.txz
added :: bleachbit-1.12-x86_64-1sl.txz
added :: p7zip-16.02-x86_64-1sl.txz
added :: lame-3.99.5-x86_64-3sl.txz
added :: gnome-mplayer-1.0.8-x86_64-3sl.txz
added :: x264-20160613-x86_64-1sl.txz
added :: twolame-0.3.13-x86_64-4sl.txz
added :: xvidcore-1.3.4-x86_64-1sl.txz
+--------------------------+
Wed Jul 20 10:17:29 CEST 2016
added :: darkplaces-20140513-x86_64-2sl.txz
added :: pcsxr-1.9.93-x86_64-2sl.txz
added :: wxGTK-2.8.12-x86_64-3sl.txz
added :: imlib2-1.4.9-x86_64-1sl.txz
added :: slapt-get-0.10.2t-x86_64-1sl.txz
added :: requiredbuilder-0.16.5-x86_64-5sl.txz
+--------------------------+
Sat Jul  2 17:16:42 CEST 2016
added :: unrar-5.0.14-x86_64-2sl.txz