@@ -1,8 +1,8 @@
-PACKAGES.TXT;  Thu Aug  4 05:39:03 CEST 2016
+PACKAGES.TXT;  Sat Aug  6 05:39:29 CEST 2016
 
 This file provides details on the packages found on this site
-Total size of all packages (compressed) :  72 MB
-Total size of all packages (uncompressed) :  287 MB
+Total size of all packages (compressed) :  144 MB
+Total size of all packages (uncompressed) :  423 MB
 
 PACKAGE NAME:  lua-5.1.5-x86_64-3sl.txz 
 PACKAGE LOCATION:  ./development/lua/5.1.5
@@ -397,6 +397,42 @@ skype_static: This version include some 32bit libraries
 skype_static:
 skype_static: 
 skype_static:
+
+PACKAGE NAME:  dia-0.97.3-x86_64-1sl.txz 
+PACKAGE LOCATION:  ./office/dia/0.97.3
+PACKAGE SIZE (compressed):  3482 K
+PACKAGE SIZE (uncompressed):  20290 K
+PACKAGE REQUIRED:  atk >= 2.18.0-x86_64-1,bzip2 >= 1.0.6-x86_64-1,cairo >= 1.14.6-x86_64-2,expat >= 2.1.0-x86_64-1,fontconfig >= 2.11.1-x86_64-2,freetype >= 2.6.3-x86_64-1,gdk-pixbuf2 >= 2.32.3-x86_64-1,glib2 >= 2.46.2-x86_64-2,glibc-solibs >= 2.23-x86_64-1,gtk+2 >= 2.24.30-x86_64-1,harfbuzz >= 1.2.7-x86_64-1,libX11 >= 1.6.3-x86_64-2,libXau >= 1.0.8-x86_64-2,libXcomposite >= 0.4.4-x86_64-2,libXcursor >= 1.1.14-x86_64-2,libXdamage >= 1.1.4-x86_64-2,libXdmcp >= 1.1.2-x86_64-2,libXext >= 1.3.3-x86_64-2,libXfixes >= 5.0.2-x86_64-1,libXi >= 1.7.6-x86_64-1,libXinerama >= 1.1.3-x86_64-2,libXrandr >= 1.5.0-x86_64-1,libXrender >= 0.9.9-x86_64-1,libXxf86vm >= 1.1.4-x86_64-2,libart_lgpl >= 2.3.21-x86_64-1,libdrm >= 2.4.68-x86_64-1,libffi >= 3.2.1-x86_64-1,libpng >= 1.6.23-x86_64-1,libxcb >= 1.11.1-x86_64-1,libxml2 >= 2.9.4-x86_64-2,libxshmfence >= 1.2-x86_64-2,libxslt >= 1.1.29-x86_64-1,mesa >= 11.2.2-x86_64-1,pango >= 1.38.1-x86_64-1,pixman >= 0.34.0-x86_64-1,xz >= 5.2.2-x86_64-1,zlib >= 1.2.8-x86_64-1
+PACKAGE CONFLICTS:  
+PACKAGE SUGGESTS:  
+PACKAGE DESCRIPTION:
+dia: Dia (diagram creation program)
+dia:
+dia: Dia is inspired by the commercial Windows program 'Visio', though 
+dia: more geared towards informal diagrams for casual use. It can be used
+dia: to draw many different kinds of diagrams. It currently has special
+dia: objects to help draw entity relationship diagrams, UML diagrams,
+dia: flowcharts, network diagrams, and many other diagrams. It is also 
+dia: possible to add support for new shapes by writing simple XML files,
+dia: using a subset of SVG to draw the shape.
+dia:
+dia: Homepage: http://live.gnome.org/Dia
+
+PACKAGE NAME:  scribus-1.4.6-x86_64-1sl.txz 
+PACKAGE LOCATION:  ./office/scribus/1.4.6
+PACKAGE SIZE (compressed):  70758 K
+PACKAGE SIZE (uncompressed):  118870 K
+PACKAGE REQUIRED:  bzip2 >= 1.0.6-x86_64-1,cairo >= 1.14.6-x86_64-2,cups >= 2.1.4-x86_64-1,expat >= 2.1.0-x86_64-1,fontconfig >= 2.11.1-x86_64-2,freetype >= 2.6.3-x86_64-1,glib2 >= 2.46.2-x86_64-2,glibc-solibs >= 2.23-x86_64-1,gmp >= 6.1.1-x86_64-1,gnutls >= 3.4.13-x86_64-1,harfbuzz >= 1.2.7-x86_64-1,lcms2 >= 2.7-x86_64-2,libICE >= 1.0.9-x86_64-2,libSM >= 1.2.2-x86_64-2,libX11 >= 1.6.3-x86_64-2,libXau >= 1.0.8-x86_64-2,libXdamage >= 1.1.4-x86_64-2,libXdmcp >= 1.1.2-x86_64-2,libXext >= 1.3.3-x86_64-2,libXfixes >= 5.0.2-x86_64-1,libXrender >= 0.9.9-x86_64-1,libXxf86vm >= 1.1.4-x86_64-2,libdrm >= 2.4.68-x86_64-1,libffi >= 3.2.1-x86_64-1,libidn >= 1.33-x86_64-1_slack14.2,libjpeg-turbo >= 1.5.0-x86_64-1,libpng >= 1.6.23-x86_64-1,libtiff >= 4.0.6-x86_64-1,libxcb >= 1.11.1-x86_64-1,libxml2 >= 2.9.4-x86_64-2,libxshmfence >= 1.2-x86_64-2,mesa >= 11.2.2-x86_64-1,nettle >= 3.2-x86_64-1,openssl-solibs >= 1.0.2h-x86_64-1,p11-kit >= 0.23.2-x86_64-1,pixman >= 0.34.0-x86_64-1,podofo >= 0.9.3-x86_64-1sl,python >= 2.7.11-x86_64-2,qt >= 4.8.7-x86_64-4,util-linux >= 2.27.1-x86_64-1,xz >= 5.2.2-x86_64-1,zlib >= 1.2.8-x86_64-1
+PACKAGE CONFLICTS:  
+PACKAGE SUGGESTS:  
+PACKAGE DESCRIPTION:
+scribus: Scribus (open-source professional page layout program)
+scribus:
+scribus: Scribus is an open-source program that brings award-winning
+scribus: professional page layout to Linux/Unix, MacOS X and Windows
+scribus: desktops with a combination of "press-ready" output and new
+scribus: approaches to page layout.
+scribus:
 
 PACKAGE NAME:  bleachbit-1.12-x86_64-1sl.txz 
 PACKAGE LOCATION:  ./system/bleachbit/1.12
