@@ -1,0 +1,142 @@
+#!/bin/sh
+ 
+# Heavily based on the Slackware 14.1 SlackBuild
+# Written by miklos < ardutu at gmail dot com >
+# Thanks to Dugan Chen (thedoogster@gmail.com)
+#
+# Slackware build script for dia
+# Official Site: http://live.gnome.org/Dia#
+# Redistribution and use of this script, with or without modification, is
+# permitted provided that the following conditions are met:
+#
+# 1. Redistributions of this script must retain the above copyright
+#    notice, this list of conditions and the following disclaimer.
+#
+# THIS SOFTWARE IS PROVIDED BY THE AUTHOR ''AS IS'' AND ANY EXPRESS OR IMPLIED
+# WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF
+# MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO
+# EVENT SHALL THE AUTHOR BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL,
+# SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO,
+# PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS;
+# OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY,
+# WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR
+# OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF
+# ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
+#
+# Require:
+
+set -e
+
+# Basic information.
+PKGNAME=dia
+VERSION=${VERSION:-0.97.3}
+BUILD=${BUILD:-1}
+TAG=${TAG:-sl}
+ARCH=${ARCH:-$(uname -m)}
+SOURCE="http://ftp.gnome.org/pub/gnome/sources/dia/0.97/${PKGNAME}-${VERSION}.tar.xz"
+TAR=      # empty = auto
+DIR=      # empty = auto
+DOCS="AUTHORS COPYING ChangeLog* KNOWN_BUGS MAINTAINERS NEWS README* THANKS TODO"
+SLKFILES="" # all files needed to the slackbuild (except slack-desc etc..)
+
+# Automatically determine the architecture we're building on:
+case "$ARCH" in
+	  i?86) export ARCH=i486; SLKCFLAGS="-O2 -march=i486 -mtune=i686"; CHOST="i486-slackware-linux" ;;
+	x86_64) SLKCFLAGS="-O2 -fPIC"; LIBDIRSUFFIX="64"; CHOST="x86_64-slackware-linux" ;;
+	  arm*) export ARCH=arm; SLKCFLAGS="-O2 -march=armv5te"; CHOST="arm-slackware-linux-gnueabi" ;;
+# Unless $ARCH is already set, use uname -m for all other archs:
+		 *) export ARCH=$( uname -m ) ;;
+esac
+
+# Does not touch following if not needed
+JOBS=${JOBS:--j2}
+CWD=$(pwd)
+TMP=${TMP:-/tmp/buildpkgs/$PKGNAME}
+PKG=$TMP/package-$PKGNAME
+OUTPUT=${OUTPUT:-$CWD}
+TAR=${TAR:-$(basename $SOURCE)}
+DIR=${DIR:-$(echo "$TAR"|sed -r 's/(\.tar|)(.gz|.bz2|.xz|)$//')}
+ 
+if [ ! -e "$CWD/$TAR" ];then
+  wget "$SOURCE" -O "$CWD/$TAR"
+fi
+
+### Preparing Source
+rm -rf $TMP
+mkdir -p $TMP $PKG $OUTPUT
+cd $TMP
+tar xvf $CWD/$TAR
+cd $DIR
+ 
+chown -R root:root .
+chmod -R u+w,go+r-w,a-s .
+
+# Fix the location of the French manpages.
+sed -i 's/$(datadir)\/man/@mandir@/' doc/fr/Makefile.in
+
+CFLAGS="$CFLAGS $SLKCFLAGS" \
+CXXFLAGS="$CXXFLAGS $SLKCFLAGS" \
+./configure \
+  --prefix=/usr \
+  --libdir=/usr/lib$LIBDIRSUFFIX \
+  --sysconfdir=/etc \
+  --localstatedir=/var \
+  --docdir=/usr/doc/$PKGNAME-$VERSION \
+  --mandir=/usr/man \
+  --build=$CHOST
+make $JOBS
+make install DESTDIR=$PKG
+
+# Documentations
+mkdir -p $PKG/usr/doc/$PKGNAME-$VERSION
+for DC in $DOCS;do
+  [ -e $DC ]&&cp -r $DC $PKG/usr/doc/$PKGNAME-$VERSION/
+done
+
+mkdir -p $PKG/usr/doc/$PKGNAME-$VERSION/SlackBuild
+cd $CWD
+for SB in $PKGNAME.SlackBuild slack-desc doinst.sh doinst.sh.gz EULA.TXT $SLKFILES;do
+  [ -e $SB ]&&cp -r $SB $PKG/usr/doc/$PKGNAME-$VERSION/SlackBuild/$SB
+done
+
+for i in man info
+do
+    if [ -d $PKG/usr/$i ]; then
+   		cd $PKG/usr/$i
+		find . -type f -exec gzip -9 {} \;
+		for file in $( find . -type l ) ; do ln -s $( readlink $file ).gz $file.gz ; rm $file ; done
+		[ "$i" == "info" ] && rm -f dir
+    fi
+done
+
+# Strip binary files
+( cd $PKG
+  find . | xargs file | grep "executable" | grep ELF | cut -f 1 -d : | xargs -r strip --strip-unneeded 2> /dev/null || true
+  find . | xargs file | grep "shared object" | grep ELF | cut -f 1 -d : | xargs -r strip --strip-unneeded 2> /dev/null || true
+  find . | xargs file | grep "current ar archive" | cut -f 1 -d : | xargs -r strip --strip-unneeded 2> /dev/null || true
+)
+
+
+# Preparing to packaging
+mkdir -p $PKG/install
+cat $CWD/slack-desc > $PKG/install/slack-desc
+[ -e $CWD/doinst.sh ] && cat $CWD/doinst.sh > $PKG/install/doinst.sh
+[ -e $CWD/doinst.sh.gz ] && zcat $CWD/doinst.sh.gz > $PKG/install/doinst.sh
+
+cd $PKG
+chown -R root:root $PKG
+ 
+if [ -x "$(which requiredbuilder 2>/dev/null)" ];then
+  requiredbuilder -y -v -s $CWD $PKG   # add "-c -b" if you have binary files in /usr/share 
+  [ -e install/slack-required ]&&cat install/slack-required > $PKG/usr/doc/$PKGNAME-$VERSION/SlackBuild/slack-required
+fi
+
+# Packaging
+/sbin/makepkg -l y -c n $OUTPUT/$PKGNAME-$VERSION-$ARCH-$BUILD$TAG.${PKGTYPE:-txz}
+ 
+if [ "$1" = "--cleanup" ]; then
+  rm -rf $TMP
+fi
+
+
+
