@@ -1,0 +1,19 @@
+# HOW TO EDIT THIS FILE:
+# The "handy ruler" below makes it easier to edit a package description.  Line
+# up the first '|' above the ':' following the base package name, and the '|'
+# on the right side marks the last column you can put a character in.  You must
+# make exactly 11 lines for the formatting to be correct.  It's also
+# customary to leave one space after the ':'.
+
+   |-----handy-ruler------------------------------------------------------|
+dia: Dia (diagram creation program)
+dia:
+dia: Dia is inspired by the commercial Windows program 'Visio', though 
+dia: more geared towards informal diagrams for casual use. It can be used
+dia: to draw many different kinds of diagrams. It currently has special
+dia: objects to help draw entity relationship diagrams, UML diagrams,
+dia: flowcharts, network diagrams, and many other diagrams. It is also 
+dia: possible to add support for new shapes by writing simple XML files,
+dia: using a subset of SVG to draw the shape.
+dia:
+dia: Homepage: http://live.gnome.org/Dia
