@@ -1,0 +1,37 @@
+atk >= 2.18.0-x86_64-1
+bzip2 >= 1.0.6-x86_64-1
+cairo >= 1.14.6-x86_64-2
+expat >= 2.1.0-x86_64-1
+fontconfig >= 2.11.1-x86_64-2
+freetype >= 2.6.3-x86_64-1
+gdk-pixbuf2 >= 2.32.3-x86_64-1
+glib2 >= 2.46.2-x86_64-2
+glibc-solibs >= 2.23-x86_64-1
+gtk+2 >= 2.24.30-x86_64-1
+harfbuzz >= 1.2.7-x86_64-1
+libX11 >= 1.6.3-x86_64-2
+libXau >= 1.0.8-x86_64-2
+libXcomposite >= 0.4.4-x86_64-2
+libXcursor >= 1.1.14-x86_64-2
+libXdamage >= 1.1.4-x86_64-2
+libXdmcp >= 1.1.2-x86_64-2
+libXext >= 1.3.3-x86_64-2
+libXfixes >= 5.0.2-x86_64-1
+libXi >= 1.7.6-x86_64-1
+libXinerama >= 1.1.3-x86_64-2
+libXrandr >= 1.5.0-x86_64-1
+libXrender >= 0.9.9-x86_64-1
+libXxf86vm >= 1.1.4-x86_64-2
+libart_lgpl >= 2.3.21-x86_64-1
+libdrm >= 2.4.68-x86_64-1
+libffi >= 3.2.1-x86_64-1
+libpng >= 1.6.23-x86_64-1
+libxcb >= 1.11.1-x86_64-1
+libxml2 >= 2.9.4-x86_64-2
+libxshmfence >= 1.2-x86_64-2
+libxslt >= 1.1.29-x86_64-1
+mesa >= 11.2.2-x86_64-1
+pango >= 1.38.1-x86_64-1
+pixman >= 0.34.0-x86_64-1
+xz >= 5.2.2-x86_64-1
+zlib >= 1.2.8-x86_64-1
