@@ -1,0 +1,19 @@
+# HOW TO EDIT THIS FILE:
+# The "handy ruler" below makes it easier to edit a package description.
+# Line up the first '|' above the ':' following the base package name, and
+# the '|' on the right side marks the last column you can put a character in.
+# You must make exactly 11 lines for the formatting to be correct.  It's also
+# customary to leave one space after the ':' except on otherwise blank lines.
+
+       |-----handy-ruler------------------------------------------------------|
+scribus: Scribus (open-source professional page layout program)
+scribus:
+scribus: Scribus is an open-source program that brings award-winning
+scribus: professional page layout to Linux/Unix, MacOS X and Windows
+scribus: desktops with a combination of "press-ready" output and new
+scribus: approaches to page layout.
+scribus:
+scribus:
+scribus:
+scribus:
+scribus:
