@@ -1,0 +1,42 @@
+bzip2 >= 1.0.6-x86_64-1
+cairo >= 1.14.6-x86_64-2
+cups >= 2.1.4-x86_64-1
+expat >= 2.1.0-x86_64-1
+fontconfig >= 2.11.1-x86_64-2
+freetype >= 2.6.3-x86_64-1
+glib2 >= 2.46.2-x86_64-2
+glibc-solibs >= 2.23-x86_64-1
+gmp >= 6.1.1-x86_64-1
+gnutls >= 3.4.13-x86_64-1
+harfbuzz >= 1.2.7-x86_64-1
+lcms2 >= 2.7-x86_64-2
+libICE >= 1.0.9-x86_64-2
+libSM >= 1.2.2-x86_64-2
+libX11 >= 1.6.3-x86_64-2
+libXau >= 1.0.8-x86_64-2
+libXdamage >= 1.1.4-x86_64-2
+libXdmcp >= 1.1.2-x86_64-2
+libXext >= 1.3.3-x86_64-2
+libXfixes >= 5.0.2-x86_64-1
+libXrender >= 0.9.9-x86_64-1
+libXxf86vm >= 1.1.4-x86_64-2
+libdrm >= 2.4.68-x86_64-1
+libffi >= 3.2.1-x86_64-1
+libidn >= 1.33-x86_64-1_slack14.2
+libjpeg-turbo >= 1.5.0-x86_64-1
+libpng >= 1.6.23-x86_64-1
+libtiff >= 4.0.6-x86_64-1
+libxcb >= 1.11.1-x86_64-1
+libxml2 >= 2.9.4-x86_64-2
+libxshmfence >= 1.2-x86_64-2
+mesa >= 11.2.2-x86_64-1
+nettle >= 3.2-x86_64-1
+openssl-solibs >= 1.0.2h-x86_64-1
+p11-kit >= 0.23.2-x86_64-1
+pixman >= 0.34.0-x86_64-1
+podofo >= 0.9.3-x86_64-1sl
+python >= 2.7.11-x86_64-2
+qt >= 4.8.7-x86_64-4
+util-linux >= 2.27.1-x86_64-1
+xz >= 5.2.2-x86_64-1
+zlib >= 1.2.8-x86_64-1
